<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IBM VA Wellness</string>
    <string name="selectDevice">Select Your device</string>
    <string name="action_settings">Disconnect</string>
    <string name="couldnotconnect">Sorry, Could not connect to the Polar device</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetoothOff">Turn Bluetooth On?</string>
    <string name="rpm">BPM</string>
    <string name="rr">RR</string>
    <string name="hrv">HRV</string>
    <string name="min">min</string>
    <string name="max">max</string>
    <string name="avg">avg</string>
    <string name="about">About</string>
    <string name="title_activity_about">About</string>
    <string name="banner_ad_unit_id">ca-app-pub-7344227317954564/2556270733</string>
    <string name="aboutText">
        This app is a simple app that provides connectivity for Polar heart monitor. \nIt only diplays information without complex settings or logging information for jogging.
        No need to start a session or to record data.

        \n\n\n****The Polar device needs to be paired with the phone in android.

         \n\n\n \n\n\n Please if you could translate this app on other language it would be really nice! Just fork me on GitHub  https://github.com/marcolivierarsenault/PolarHeartRateApplication (Also work if you want to add more features)</string>

</resources>